<menu xmlns:android="http://schemas.android.com/apk/res/android" 
 xmlns:ActionBar="http://schemas.android.com/apk/res-auto"> 

     <item
        android:id="@+id/tweet_send_open"
        android:orderInCategory="100"
        ActionBar:showAsAction="ifRoom"
        android:title="@string/tweet_send_open"/>

 	<item
        android:id="@+id/reload_home_timeline"
        android:orderInCategory="500"
        ActionBar:showAsAction="ifRoom"
        android:title="@string/reload_home_timeline"/>
 	
 	<item
        android:id="@+id/reload_user_timeline"
        android:orderInCategory="500"
        ActionBar:showAsAction="ifRoom"
        android:title="@string/reload_user_timeline"/>
 	<item android:id="@+id/logout_button"
 	    android:orderInCategory="1000"
 	    ActionBar:showAsAction="never"
 	    android:title="@string/logout_button" />
</menu>
