<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tweet"
            android:id="@+id/buttonList" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewUserName" android:layout_gravity="right|center_vertical" android:padding="10dp"
            android:singleLine="false"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_status"
            android:id="@+id/textViewStatus" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextStatus" android:layout_margin="10dp"
            android:hint="@string/tweet_hint"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tweet"
            android:id="@+id/buttonUpdateStatus" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:id="@+id/buttonLogout" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"/>
</LinearLayout>

