<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/tweet_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/tweet_send_hint"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/tweet_input_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/tweet_add_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tweet_input_counter"
        android:layout_below="@+id/tweet_input"
        android:layout_marginTop="32dp"
        android:text="@string/tweet_send_add_photo_button" />

    <ImageView
        android:id="@+id/tweet_photo_imageview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/tweet_add_photo_button"
        android:layout_below="@+id/tweet_add_photo_button"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/hint_text"
        android:src="@drawable/abc_ab_share_pack_holo_dark" />

</RelativeLayout>